# PPG

./: CMakeLists.txt
app-ppg/: CMakeLists.txt
app-ppg/include/application/: Application.h
app-ppg/include/interface/: MainWindow.h
app-ppg/include/workers/: Worker.h  WorkerBuffering.h  WorkerPreProcessing.h  WorkerSignalProcessing.h  WorkerWebcam.h
app-ppg/src/application/: Application.cpp  main.cpp
app-ppg/src/interface/: MainWindow.cpp
app-ppg/src/workers/: Worker.cpp  WorkerBuffering.cpp  WorkerPreProcessing.cpp  WorkerSignalProcessing.cpp  WorkerWebcam.cpp
app-ppg/ui/interface/: mainwindow.ui
toolkit-image/: CMakeLists.txt
toolkit-image/include/: WebcamManager.h
toolkit-image/src/: WebcamManager.cpp
toolkit-qt/: CMakeLists.txt
toolkit-qt/include/: ImageDisplay.h  TemporalSignalDisplay.h
toolkit-qt/src/: ImageDisplay.cpp
toolkit-signal/include/: Buffering.h  IIRFilter.h  SignalProcessing.h  TemporalFilter.h
toolkit-signal/src/: Buffering.cpp  IIRFilter.cpp  SignalProcessing.cpp  TemporalFilter.cpp
toolkit-tracking/: CMakeLists.txt
toolkit-tracking/include/: FaceDetection.h
toolkit-tracking/src/: FaceDetection.cpp
